# shaden-rs

./: .env.example  Cargo.toml  README.md  store_config.json
src/: config.rs  errors.rs  main.rs
src/commands/: admin.rs  coins.rs  coupons.rs  join_rewards.rs  mod.rs  servers.rs  store.rs
src/models/: coupon.rs  mod.rs  order.rs  server.rs  user.rs
src/services/: db.rs  mod.rs  pterodactyl.rs  queue.rs  stripe.rs
