[package]
name = "shaden-rs"
version = "0.1.0"
edition = "2021"
authors = ["Zppqr"]
description = "Production-grade Discord bot for Pterodactyl hosting management"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
mongodb = "2.8"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
stripe-rust = { version = "0.25", features = ["async"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
